update proto API definitions
